objects/VisitOps__Status_Mapping__c.object
<CustomObject>
    <description>This object stores the mappings between current status and its valid new statuses for that visit</description>
    <fields>
        <fullName>VisitOps__CurrentStatusFormula__c</fullName>
        <formula>VisitOps__CurrentStatus__r.Name</formula>
        <label>Current Status Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__CurrentStatus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Represents the current status of a visit</description>
        <label>Current Status</label>
        <referenceTo>VisitOps__Status__c</referenceTo>
        <relationshipLabel>Status Mapping (Valid Next Statuses)</relationshipLabel>
        <relationshipName>CurrentStatusMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__NextStatusFormula__c</fullName>
        <formula>VisitOps__NextStatus__r.Name</formula>
        <label>Next Status Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__NextStatus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This represents one of the valid statuses that a visit can move into from current status</description>
        <label>Next Status</label>
        <referenceTo>VisitOps__Status__c</referenceTo>
        <relationshipLabel>Status Mapping (Next Status)</relationshipLabel>
        <relationshipName>NextStatusMapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Status Mapping</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Status Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>